packages/admin/public/app.css
/* ... */
.mr-0 {
  margin-right: 0px;
}
.block {
  display: block;
}
.inline-block {
  display: inline-block;
}
.inline {
  display: inline;
}
.flex {
  display: flex;
}
.inline-flex {
  display: inline-flex;
}
.table {
  display: table;
}
.flow-root {
  display: flow-root;
}
.grid {
  display: grid;
}
.hidden {
  display: none;
}
.aspect-\[16\/9\] {
  aspect-ratio: 16/9;
}
.h-screen {
  height: 100vh;
}
.h-5 {
  height: 1.25rem;
}
.h-6 {
  height: 1.5rem;
}
.h-full {
  height: 100%;
}
.h-7 {
  height: 1.75rem;
}
.h-4 {
  height: 1rem;
}
.h-24 {
  height: 6rem;
}
.h-12 {
  height: 3rem;
}
.h-96 {
  height: 24rem;
}
.h-80 {
  height: 20rem;
}
.h-3 {
  height: 0.75rem;
}
.h-10 {
  height: 2.5rem;
}
.h-8 {
  height: 2rem;
}
.h-16 {
  height: 4rem;
}
.h-\[58px\] {
  height: 58px;
}
.h-\[42px\] {
  height: 42px;
}
.h-64 {
  height: 16rem;
}
.h-32 {
  height: 8rem;
}
.h-2 {
  height: 0.5rem;
}
.max-h-60 {
  max-height: 15rem;
}
.max-h-48 {
  max-height: 12rem;
}
.max-h-96 {
  max-height: 24rem;
}
.max-h-64 {
  max-height: 16rem;
}
.min-h-screen {
  min-height: 100vh;
}
.w-full {
  width: 100%;
}
.w-32 {
  width: 8rem;
}
.w-5 {
  width: 1.25rem;
}
.w-56 {
  width: 14rem;
}
.w-6 {
  width: 1.5rem;
}
.w-0 {
  width: 0px;
}
.w-screen {
  width: 100vw;
}
.w-3 {
  width: 0.75rem;
}
.w-72 {
  width: 18rem;
}
.w-12 {
  width: 3rem;
}
.w-24 {
  width: 6rem;
}
.w-28 {
  width: 7rem;
}
.w-auto {
  width: auto;
}
.w-8 {
  width: 2rem;
}
.w-4 {
  width: 1rem;
}
.w-64 {
  width: 16rem;
}
.w-11 {
  width: 2.75rem;
}
.w-10 {
  width: 2.5rem;
}
.w-0\.5 {
  width: 0.125rem;
}
.w-px {
  width: 1px;
}
.w-36 {
  width: 9rem;
}
.w-48 {
  width: 12rem;
}
.w-20 {
  width: 5rem;
}
.w-\[2px\] {
  width: 2px;
}
.w-16 {
  width: 4rem;
}
.w-\[calc\(100vw_-_12rem\)\] {
  width: calc(100vw - 12rem);
}
.w-\[calc\(100vw_-_5rem\)\] {
  width: calc(100vw - 5rem);
}
.w-80 {
  width: 20rem;
}
.w-1\/3 {
  width: 33.333333%;
}
.w-44 {
  width: 11rem;
}
.w-2 {
  width: 0.5rem;
}
.w-\[calc\(100vw_-_23rem\)\] {
  width: calc(100vw - 23rem);
}
.w-\[calc\(100vw_-_30rem\)\] {
  width: calc(100vw - 30rem);
}
.min-w-full {
  min-width: 100%;
}
.min-w-0 {
  min-width: 0px;
}
.max-w-sm {
  max-width: 24rem;
}
.max-w-full {
  max-width: 100%;
}
.max-w-xl {
  max-width: 36rem;
}
.max-w-2xl {
  max-width: 42rem;
}
.max-w-screen-2xl {
  max-width: 1536px;
}
.max-w-7xl {
  max-width: 80rem;
}
.max-w-xs {
  max-width: 20rem;
}
.max-w-\[200px\] {
  max-width: 200px;
}
.flex-1 {
  flex: 1 1 0%;
}
.flex-auto {
  flex: 1 1 auto;
}
.flex-initial {
  flex: 0 1 auto;
}
.flex-none {
  flex: none;
}
.flex-shrink-0 {
  flex-shrink: 0;
}
.shrink {
  flex-shrink: 1;
}
.shrink-0 {
  flex-shrink: 0;
}
.grow {
  flex-grow: 1;
}
.basis-1\/4 {
  flex-basis: 25%;
}
.basis-2\/3 {
  flex-basis: 66.666667%;
}
.basis-1\/3 {
  flex-basis: 33.333333%;
}
.table-auto {
  table-layout: auto;
}
.border-collapse {
  border-collapse: collapse;
}
.origin-top-right {
  transform-origin: top right;
}
.origin-bottom-right {
  transform-origin: bottom right;
}
.translate-y-4 {
  --tw-translate-y: 1rem;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}
.translate-y-0 {
  --tw-translate-y: 0px;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}
.translate-y-2 {
  --tw-translate-y: 0.5rem;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}
.translate-x-full {
  --tw-translate-x: 100%;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}
.translate-x-0 {
  --tw-translate-x: 0px;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}
.translate-x-5 {
  --tw-translate-x: 1.25rem;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}
.-translate-x-full {
  --tw-translate-x: -100%;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}
.-translate-y-px {
  --tw-translate-y: -1px;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}
.-rotate-180 {
  --tw-rotate: -180deg;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}
.-rotate-90 {
  --tw-rotate: -90deg;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}
.rotate-180 {
  --tw-rotate: 180deg;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}
.scale-95 {
  --tw-scale-x: .95;
  --tw-scale-y: .95;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}
/* ... */

